content/docs/0.8.x/reference/cli/commands/keptn_delete.md
---
date: "2020-11-19T19:04:54+05:30"
title: "keptn delete"
slug: keptn_delete
---
## keptn delete

Deletes a project

### Synopsis

Deletes a project

### Options

```
  -h, --help   help for delete
```

### Options inherited from parent commands

```
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default keptn). (default "keptn")
  -q, --quiet                Suppresses debug and info messages
      --suppress-websocket   Disables WebSocket communication to suppress info messages from services running inside Keptn
  -v, --verbose              Enables verbose logging to print debug messages
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn delete project](../keptn_delete_project/)	 - Deletes a project identified by project name
* [keptn delete service](../keptn_delete_service/)	 - Deletes a service from a project

###### Auto generated by spf13/cobra on 19-Nov-2020
