content/docs/0.11.x/reference/cli/commands/keptn_delete.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn delete"
slug: keptn_delete
---
## keptn delete

Deletes a project

### Synopsis

Deletes a project

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn delete project](../keptn_delete_project/)	 - Deletes a project identified by project name
* [keptn delete secret](../keptn_delete_secret/)	 - Deletes a secret from the given scope
* [keptn delete service](../keptn_delete_service/)	 - Deletes a service from a project

###### Auto generated by spf13/cobra on 25-Nov-2021
